Add Bug Fixed